--- a/SignUpPage.css
+++ b/SignUpPage.css
@@ -12,11 +12,13 @@
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.4);
     /* border-radius: 30px; */
    
+  
     background: linear-gradient(
-      90deg,
+      180deg,
       #f7e5e5,
+      50%
       #a7cdf8,
-      48%,
+ 40%
       #ffffff,
       48%,
       #ffffff
@@ -26,18 +28,20 @@
   .signup-page-container .img-box {
     width: 47%;
     display: flex;
-    
     justify-content: center;
     align-items: center;
   }
   .signup-page-container .img-box img {
     width: 70%;
+    
+    margin-bottom: 32%;
     /* border: 2px solid black; */
   }
   .signup-page-container .signup-page .signup-form {
     /* border: 2px solid black; */
     width: 50%;
     padding: 35px 40px;
+    
     padding-left: 75px;
     position: relative;
   }
@@ -60,6 +64,8 @@
   }
   .signup-page-container .signup-page .signup-form .full-name input {
     font-size: 15px;
+    display: flex;
+    
   }
   .signup-page-container .signup-page .signup-form input {
     font-size: 15px;
@@ -145,24 +151,25 @@
       box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.4);
       /* border-radius: 30px; */
       width: 100%;
-      height: 47vh;
+      height: 100%;
       background: linear-gradient(
         180deg,
         #f7e5e5,
+        
         #a7cdf8,
-        48%,
+        35%,       
         #ffffff,
-        48%,
+        37%,
         #ffffff
       );
     
     }
-    .signup-page-container .img-box {
+     .img-box {
       width: 47%;
       display: flex;
       justify-content: center;
     margin-left: 25%;
-    margin-top: 10%;
+    
     }
     .signup-page-container .img-box img {
       width: 70%;
@@ -178,7 +185,7 @@
     .signup-page-container .signup-page .signup-form h2 {
       color: rgb(128, 122, 119);
       text-align: center;
-      margin-top: 20%;
+      margin-top: 15%;
    
     }
     .signup-page-container .signup-page .signup-form form {
@@ -191,6 +198,7 @@
     }
     .signup-page-container .signup-page .signup-form .full-name {
       width: 100%;
+      flex-direction: column;
       display: flex;
       gap: 10px;
     }
@@ -233,12 +241,13 @@
     .signup-page-container .signup-page .signup-form .logo p:nth-child(2) {
       color: #94b6f5;
     }
+    
     .signup-page-container .signup-page .signup-form #welcome-signup {
       position: absolute;
       color: rgb(255, 249, 249);
       padding: 8px 20px;
       border-radius: 0px 24px 24px 0px;
-      top: 27px;
+      top: 0px;
       left: 0px;
       font-size: 17px;
       background: linear-gradient(145deg, #7ab5f8, #93c2f7, #1968fc);
@@ -249,7 +258,7 @@
       align-items: center;
       /* padding: 1px 3px; */
       background: transparent;
-      /* border-bottom: 3px solid rgb(204, 211, 218) */
+      border-bottom: 3px solid rgb(204, 211, 218);
       position: relative;
     }
     .signup-form .retype-pass i {
@@ -265,4 +274,4 @@
       position: relative;
       left: 80px;
     }
-  } 
+  }
